# BuildAtlasv2

./: .gitignore  .vestige  AGENTS.md  ML_IMPLEMENTATION_PLAN.md  ML_TRAINING_PLAN.md  Makefile  POB_WORKER_SETUP.md  README.md  docker-compose.yml  opencode.json  package-lock.json  pob_build_generator_single_source_of_truth.md  v2.md
backend/: .env.example  README.md  pyproject.toml  pytest.ini  ruff.toml
backend/app/: catalog_columns.py  main.py  settings.py
backend/buildatlas_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/engine/: __init__.py  build_details.py  constraints.py  genome.py  metrics_source.py  ruleset.py  worker_pool.py
backend/pob_worker/: Dockerfile  README.md  VERIFICATION.md  check_dependencies.sh  mock_worker.lua  pob_worker.lua  test_real_worker.lua  test_real_worker2.lua  test_real_worker3.lua  test_real_worker4.lua  test_verify.sh  test_worker.sh  verify_calculations.lua  worker.lua
backend/reports/: __init__.py  archive_viz.py
backend/tests/: conftest.py  test_api_flow.py  test_apply_schema.py  test_archive_api.py  test_archive_integration.py  test_archive_qd.py  test_artifact_persistence.py  test_artifact_store.py  test_build_details_api.py  test_bulk_import.py  test_catalog_columns_api.py  test_clickhouse_repo.py  test_cost_backfill.py  test_cost_calculator.py  test_cost_extraction.py  test_csp.py  test_curriculum_manager.py  test_curriculum_scheduler.py  test_dataset_snapshot.py  test_diversity_selection.py  test_drift_report.py  test_e2e_pipeline.py  test_e2e_smoke.py  test_evaluator.py  test_genome.py  (+37 more)
(+170 files in other folders)
