[project]
name = "buildatlas-backend"
version = "0.1.0"
description = "Backend orchestrator for the BuildAtlas PoC"
authors = [
	{name = "BuildAtlas Team", email = "team@example.com"},
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"fastapi>=0.110",
	"uvicorn>=0.23",
	"uvloop>=0.19",
	"httptools>=0.6",
	"pydantic-settings>=2.4",
	"clickhouse-connect>=0.5",
	"orjson>=3.9.0",
	"xxhash>=3.2.0",
	"aiofiles>=23.0.0"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "ruff>=0.0.275"
]

ml = [
    "numpy",
    "scikit-learn",
    "torch"
]

performance = [
    "orjson>=3.9.0",
    "xxhash>=3.2.0",
    "aiofiles>=23.0.0"
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "engine*"]
